added requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,7 @@
-_tflow_select==2.3.0
-absl-py==0.13.0
-astor==0.8.1
-async-generator==1.10
-attrs==21.2.0
-blas==1.0
-c-ares==1.17.1
-ca-certificates==2021.7.5
-cached-property==1.5.2
-certifi==2021.5.30
-coverage==5.5
-cython==0.29.24
-gast==0.2.2
-google-pasta==0.2.0
-grpcio==1.36.1
-h5py==2.10.0
-hdf5==1.10.6
-idna==3.2
-importlib-metadata==3.10.0
-intel-openmp==2021.3.0
-keras-applications==1.0.8
-keras-preprocessing==1.1.2
-libcxx==10.0.0
-libffi==3.3
-libgfortran==3.0.1
-libopenblas==0.3.13
-libprotobuf==3.17.2
-markdown==3.3.4
-mkl-service==2.4.0
-mkl==2021.3.0
-ncurses==6.2
-numpy-base==1.18.5
 numpy==1.18.5
-openssl==1.1.1k
-opt_einsum==3.3.0
-outcome==1.1.0
-pip==21.2.2
-protobuf==3.17.2
 pyaudio==0.2.11
 pydub==0.25.1
 pyserial==3.5
-python==3.7.11
-readline==8.1
-scipy==1.6.2
-setuptools==52.0.0
-simpleaudio==1.0.4
-six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-sqlite==3.36.0
-tensorboard==2.0.0
-tensorflow-base==2.0.0
-tensorflow-estimator==2.0.0
 tensorflow==2.0.0
-termcolor==1.1.0
-tk==8.6.10
-trio==0.19.0
-typing_extensions==3.10.0.0
-werkzeug==1.0.1
-wheel==0.36.2
-wrapt==1.12.1
-xz==5.2.5
-zipp==3.5.0
-zlib==1.2.11
+
+trio~=0.19.0
